cp project/force-app/main/default/objects/Unit__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area (sq ft)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>