cp project/force-app/main/default/objects/Unit__c/fields/Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Area_Sq_Ft__c</fullName>
    <label>Area (Sq. Ft.)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>