cp project/force-app/main/default/objects/Unit__c/fields/Block_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Block_Expiry_Date__c</fullName>
    <label>Block Expiry Date</label>
    <type>DateTime</type>
</CustomField>