cp project/force-app/main/default/objects/Unit__c/fields/Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By__c</fullName>
    <label>Blocked By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>