cp project/force-app/main/default/objects/Unit__c/fields/Blocked_For_Customer__c.field-meta.xml
<CustomField>
    <fullName>Blocked_For_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked For Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blocked For Customer</relationshipLabel>
    <relationshipName>Blocked_Units</relationshipName>
    <type>Lookup</type>
</CustomField>