cp project/force-app/main/default/objects/Unit__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Car Parking</label>
    <type>Checkbox</type>
</CustomField>