cp project/force-app/main/default/objects/Unit__c/fields/Club_Amenities_Charges__c.field-meta.xml
<CustomField>
    <fullName>Club_Amenities_Charges__c</fullName>
    <label>Club &amp; Amenities Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>