cp project/force-app/main/default/objects/Unit__c/fields/Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Parking_Charges__c</fullName>
    <label>Parking Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>