cp project/force-app/main/default/objects/Unit__c/listViews/Available_Units.listView-meta.xml
<ListView>
    <fullName>Available_Units</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>Floor__c</columns>
    <columns>Configuration__c</columns>
    <columns>Area__c</columns>
    <columns>Facing__c</columns>
    <columns>Price__c</columns>
    <columns>Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Availability__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Units</label>
</ListView>